changed html and js code to show task2 on the html page

--- a/index.html
+++ b/index.html
@@ -18,32 +18,27 @@
   </head>
 
   <body>
-    <div
-      id="people"
-      class="has-background-lightgray p-4 m-3 has-background-grey-lighter"
-    >
-      <h1 class="title">Add a person to the DB</h1>
-      <p>Name: <input type="text" id="name" /></p>
-      <p>age: <input type="text" id="age" /></p>
-      <p>
-        Favourite color:
-        <select id="favcolor">
-          <option value="red">Red</option>
-          <option value="green">Green</option>
-          <option value="blue">Blue</option>
-        </select>
-      </p>
-
-      <!-- add people to the DB -->
-      <button id="submit">Submit</button>
-    </div>
-
-    <!-- all people from the database -->
-    <div
-      id="all_people"
-      class="has-background-lightgray p-4 m-3 has-background-grey-lighter"
-    >
-      <h1 class="title">All people stored in the database</h1>
+    <div class="column is-4">
+      <h1 class="title">Tasks</h1>
+      <div><strong>Task 2</strong></div>
+      <div>Question 1:</div>
+      <div id="spain"></div>
+      <div>Question 2:</div>
+      <div id="madrid_spain"></div>
+      <div>Question 3:</div>
+      <div id="national"></div>
+      <div>Question 4:</div>
+      <div id="not_spain"></div>
+      <div>Question 5:</div>
+      <div id="not_spain_eng"></div>
+      <div>Question 6:</div>
+      <div id="spain_700"></div>
+      <div>Question 7:</div>
+      <div id="fans_500_600"></div>
+      <div>Question 8:</div>
+      <div id="ronaldo"></div>
+      <div>Question 9:</div>
+      <div id="ronaldo_maradona_messi"></div>
     </div>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
