added lines to js to show teams for task 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="column is-4">
-      <h1 class="title">Tasks</h1>
+      <h1 class="title">Task2</h1>
       <div><strong>Task 2</strong></div>
       <div>Question 1:</div>
       <div id="spain"></div>
@@ -39,6 +39,12 @@
       <div id="ronaldo"></div>
       <div>Question 9:</div>
       <div id="ronaldo_maradona_messi"></div>
+      <p></p>
+      <div><strong>Task 3</strong></div>
+      <div>Team 1:</div>
+      <div id="madrid"></div>
+      <div>Team 2:</div>
+      <div id="barcelona"></div>
     </div>
 
     <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
