made slight changes to the html and js code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div class="column is-4">
-      <h1 class="title">Task2</h1>
+      <h1 class="title">Tasks</h1>
       <div><strong>Task 2</strong></div>
       <div>Question 1:</div>
       <div id="spain"></div>
